<resources>
    <string name="app_name">Bil Bakalım</string>
    <string name="fill"> Lütfen Boş bırakmayınız</string>
    <string name="error">Hata</string>
    <string name="quit">Oturumu Kapat</string>

    <!-- Onboarding strings -->
    <string name="skipOnBoard">Tanıtımı Geç</string>
    <string name="nextOnBoard">Devam et</string>
    <string name="finishOnBoard">Başlayalım</string>

    <string name="welcomeApp">Bil Bakalım uygulamasına hoş geldiniz…</string>
    <string name="gamePlayer">Bil Bakalım, minimum 4 maksimum ise bulabildiğiniz kişi sayısı kadar, oyunu oynarken eğlencenin doruk noktalarında olduğu bir oyundur.</string>
    <string name="readyToGame">Eğlenmek mi istiyorsun, ne duruyorsun? Hadi beraber öğrenip eğlenelim.</string>

    <string name="teamAbout">Bil bakalım, 2 takım arasında oynanan bir oyundur.</string>
    <string name="teamAboutContinue">Sırası gelen takımın oyuncusu havuzdan rastgele bir kelime almaktadır.</string>

    <string name="bannedWordAbout">Oyunu oynayan oyuncu, altı çizili kelimeyi altında bulunan siyah renkli 5 kelimeyi kullanmadan anlatmaya çalışmalı.</string>
    <string name="teamMates">Takım arkadaşları ise anlatanı dinleyip anlattığı kelime hakkında tahminde bulunabilirler. Takım arkadaşları anlatılan kelimeyi bulmak için sınırsız tahminde bulunabilirler.</string>
    <string name="inTime"> Süre sayacı 0 olmadan takım arkadaşlarının maksimum kelime bilmesini sağlamak zorundasınız.</string>
    <string name="letsPlay">Ne duruyorsun, hadi eğlencenin dibini boylayalım…</string>

    <!-- LoginFragment strings -->
    <string name="loginpagewelcomemessage">Bil Bakalım Giriş Ekranı</string>
    <string name="signIn">Giriş Yap</string>
    <string name="loginPageSignUpText">Üye değil misin?</string>
    <string name="forgotPassword"> Şifremi Unuttum </string>
    <string name="passwordLogin">Şifreniz</string>
    <string name="email">Email</string>

    <!-- RegisterFragment strings -->
    <string name="registerPageWelcomeMessage">Bil Bakalım Kayıt Ekranı</string>
    <string name="emailRegister">Email(**@*.com/tr/net vb.)</string>
    <string name="passwordRegister">Şifre(En az 6 karakter)</string>
    <string name="passwordAgain">Şifre Tekrarı</string>
    <string name="signUp">Kayıt Ol</string>
    <string name="goBack">Geri Dön</string>
    <string name="registerSuccess">Kayıt Başarılı. Lütfen giriş yapınız</string>
    <string name="passNotMatch">Şifreleriniz eşleşmiyor</string>

    <!---    forgotPassword dialog Strings     -->
    <string name="infoForgotPassword"> E-Mailinizi girip Gönder tuşuna basınız. </string>
    <string name="closeDialog">Kapat</string>
    <string name="sendMail">Gönder</string>
    <string name="checkInbox">Lütfen E-Mailinizi Kontrol Ediniz</string>

    <!-- MainPage strings -->
    <string name="newGame">Yeni Oyun</string>
    <string name="settings">Ayarlar</string>
    <string name="addWord">Kelime Ekle</string>

    <!-- NewWord strings -->
    <string name="newWordPageTitle">Kelime Ekleme Sayfası</string>
    <string name="mainWord">Bilinmesi istenen kelimeyi giriniz</string>
    <string name="penaltyOne">Yasaklanacak kelime 1</string>
    <string name="penaltyTwo">Yasaklanacak kelime 2</string>
    <string name="penaltyThree">Yasaklanacak kelime 3</string>
    <string name="penaltyFour">Yasaklanacak kelime 4</string>
    <string name="penaltyFive">Yasaklanacak kelime 5</string>
    <string name="clear">Temizle</string>
    <string name="checkDatabase">Kontrol Et</string>
    <string name="wordHave">Bu kelimeden zaten mevcut. Lütfen farklı bir kelime giriniz.</string>

    <!--- Settings strings -->
    <string name="settingsTitle"> Ayarlar </string>
    <string name="timeSettings">Süre:</string>
    <string name="timeOne">30</string>
    <string name="timeTwo">60</string>
    <string name="timeThree">90</string>
    <string name="passSettings">Pas Hakkı</string>
    <string name="passOne">1</string>
    <string name="passTwo">2</string>
    <string name="passThree">3</string>
    <string name="winPointSettings">Kazanma Puanı</string>
    <string name="winPointOne">10</string>
    <string name="winPointTwo">25</string>
    <string name="winPointThree">40</string>
    <string name="defaultSettings">Varsayılan ayarlar</string>

    <!--- Game Preparation strings -->
    <string name="menu">Menü</string>
    <string name="teamOne">A TAKIMI</string>
    <string name="teamTwo">B TAKIMI</string>
    <string name="startGame">Oyuna Başla</string>


    <!--- Game strings -->
    <string name="ready">Hazırım</string>
    <string name="score">Skor:</string>
    <string name="trueAnswer">DOĞRU</string>
    <string name="penaltyAnswer">CEZA</string>
    <string name="pass">PAS</string>
    <string name="nextPlayer">Süreniz Bitti. Sıradaki oyuncu oynayabilir veya oyunu sonlandırabilirsiniz.</string>
    <string name="winnerGame">tebrikler, oyunu kazandınız.</string>
    <string name="next">Sıradaki</string>
    <string name="rememberMe">Beni Hatırla</string>


</resources>