<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".View.Game.NewGame.GamePreparationFragment">

    <Button
        android:id="@+id/goMenuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAllCaps="false"
        android:text="@string/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/PreparationPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:fontFamily="@font/mtcorsiva"
        android:textSize="72sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/teamOneNameEditT"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:maxLength="18"
        android:text="@string/teamOne"
        android:layout_marginTop="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/PreparationPageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/teamTwoNameEditT"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:maxLength="18"
        android:text="@string/teamTwo"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/teamOneNameEditT"
        app:layout_constraintStart_toStartOf="@id/teamOneNameEditT"
        app:layout_constraintEnd_toEndOf="@id/teamOneNameEditT"/>

    <Button
        android:id="@+id/clearText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/teamTwoNameEditT"
        app:layout_constraintStart_toStartOf="@id/teamTwoNameEditT"
        app:layout_constraintEnd_toStartOf="@id/startGameBtn"/>

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"

        android:text="@string/startGame"
        app:layout_constraintTop_toTopOf="@id/clearText"
        app:layout_constraintStart_toEndOf="@id/clearText"
        app:layout_constraintEnd_toEndOf="@id/teamTwoNameEditT"/>

    <ProgressBar
        android:id="@+id/preparationProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

   

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>