<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".View.Game.NewWordFragment">

        <ImageView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_arrow_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/newWordPageTitle" />


        <TextView
            android:id="@+id/newWorldTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="72dp"
            android:gravity="center"
            android:text="@string/newWordPageTitle"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mainWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/mainWord"
            app:layout_constraintEnd_toEndOf="@id/newWorldTitle"
            app:layout_constraintStart_toStartOf="@id/newWorldTitle"
            app:layout_constraintTop_toBottomOf="@id/newWorldTitle" />

        <EditText
            android:id="@+id/banWord1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/penaltyOne"
            app:layout_constraintEnd_toEndOf="@id/newWorldTitle"
            app:layout_constraintStart_toStartOf="@id/newWorldTitle"
            app:layout_constraintTop_toBottomOf="@id/mainWord" />

        <EditText
            android:id="@+id/banWord2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/penaltyTwo"
            app:layout_constraintEnd_toEndOf="@id/newWorldTitle"
            app:layout_constraintStart_toStartOf="@id/newWorldTitle"
            app:layout_constraintTop_toBottomOf="@id/banWord1" />

        <EditText
            android:id="@+id/banWord3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/penaltyThree"
            app:layout_constraintEnd_toEndOf="@id/newWorldTitle"
            app:layout_constraintStart_toStartOf="@id/newWorldTitle"
            app:layout_constraintTop_toBottomOf="@id/banWord2" />

        <EditText
            android:id="@+id/banWord4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/penaltyFour"
            app:layout_constraintEnd_toEndOf="@id/newWorldTitle"
            app:layout_constraintStart_toStartOf="@id/newWorldTitle"
            app:layout_constraintTop_toBottomOf="@id/banWord3" />

        <EditText
            android:id="@+id/banWord5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/penaltyFour"
            app:layout_constraintEnd_toEndOf="@id/newWorldTitle"
            app:layout_constraintStart_toStartOf="@id/newWorldTitle"
            app:layout_constraintTop_toBottomOf="@id/banWord4" />

        <Button
            android:id="@+id/clearText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/clear"
            app:layout_constraintEnd_toStartOf="@+id/addWordBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banWord5" />


        <Button
            android:id="@+id/addWordBtn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/addWord"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/clearText"
            app:layout_constraintTop_toTopOf="@id/clearText" />

        <ProgressBar
            android:id="@+id/wordProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>